Add Gateway cheat support.
Fix 16 bit flags

Add joker support

add cheat search start

Add cheat search

Gui fixes

Fix mingw compile?

Fix 16 bit flags

Add joker support

Add cheat search

Gui fixes

--- a/src/citra_qt/CMakeLists.txt
+++ b/src/citra_qt/CMakeLists.txt
@@ -26,6 +26,8 @@ set(SRCS
             util/spinbox.cpp
             util/util.cpp
             bootmanager.cpp
+            cheatsearch.cpp
+			cheat_gui.cpp
             game_list.cpp
             hotkeys.cpp
             main.cpp
@@ -58,6 +60,8 @@ set(HEADERS
             util/spinbox.h
             util/util.h
             bootmanager.h
+			cheatsearch.h
+			cheat_gui.h
             game_list.h
             game_list_p.h
             hotkeys.h
@@ -75,6 +79,8 @@ set(UIS
             configuration/configure_system.ui
             configuration/configure_web.ui
             debugger/registers.ui
+			cheatsearch.ui
+			cheat_gui.ui
             hotkeys.ui
             main.ui
             )
