Strip debug infro from release builds Set NX/TS flags and min version to Win7 Enable rtti on Core&Cryptopp

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -399,3 +399,8 @@ target_link_libraries(core PUBLIC Boost::boost PRIVATE cryptopp dynarmic fmt)
 if (ENABLE_WEB_SERVICE)
     target_link_libraries(core PUBLIC json-headers web_service)
 endif()
+if(CMAKE_COMPILER_IS_GNUCXX)
+    string(REPLACE " -fno-rtti" " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+else(MSVC)
+    add_definitions(/GR)
+endif()
