--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -399,3 +399,8 @@ target_link_libraries(core PUBLIC Boost::boost PRIVATE cryptopp dynarmic fmt)
 if (ENABLE_WEB_SERVICE)
     target_link_libraries(core PUBLIC json-headers web_service)
 endif()
+if(MSVC)
+    add_definitions(/GR)
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "GCC" OR "Clang")
+    string(REPLACE " -fno-rtti" " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+endif()
