--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,13 +3,13 @@ include_directories(.)
 
 add_subdirectory(common)
 add_subdirectory(core)
-add_subdirectory(video_core)
+#add_subdirectory(video_core)
 add_subdirectory(audio_core)
 add_subdirectory(network)
 add_subdirectory(input_common)
-add_subdirectory(tests)
+#add_subdirectory(tests)
 if (ENABLE_SDL2)
-    add_subdirectory(citra)
+#    add_subdirectory(citra)
 endif()
 if (ENABLE_QT)
     add_subdirectory(citra_qt)
